--- a/go6percent/scss/layout/_header.scss
+++ b/go6percent/scss/layout/_header.scss
@@ -27,6 +27,10 @@ header{
 	position: relative;
 	background: url(../img/banner.jpg) center center no-repeat;
 	background-size: cover;
+	&_lk{
+		background: #360932;
+		height: 62px;
+	}
 	&__page{
 		background-image: url(../img/bp1.jpg);
 		/*background: linear-gradient(to right, #3a1439, #761157);*/
@@ -68,6 +72,14 @@ header{
 		justify-content: space-between;
 		align-items: center;
 	}
+	&_lk{
+		padding: 9px 0;
+		box-shadow: 0 0 0 0;
+		.wrapper{
+			width: 97%;
+    		max-width: 100%;
+		}
+	}
 	&__icons{
 		display: flex;
 		justify-content: flex-start;
@@ -107,6 +119,11 @@ header{
 			color: #fff;
 			font: 16px RM;
 		}
+		&_lk{
+			a{
+				font-size: 15px;
+			}
+		}
 	}
 	&__email{
 		display: flex;
@@ -122,6 +139,11 @@ header{
 		a{
 			color: #fff;
 			font: 16px RM;
+		}
+		&_lk{
+			a{
+				font-size: 15px;
+			}
 		}
 	}
 	&__buttons{
@@ -141,6 +163,10 @@ header{
 			background: #f523ad;
 			border-color: #f523ad;
 		}
+		&_lk{
+			font-size: 12px;
+			padding: 8.5px 32px;
+		}
 	}
 	&__register{
 		font: 14px RR;
@@ -153,6 +179,22 @@ header{
 		&:hover{
 			background: #f523ad;
 			border-color: #f523ad;
+		}
+		&_lk{
+			font-size: 12px;
+			padding: 8.5px 32px;
+		}
+	}
+	&__btc{
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		i{
+			width: 23px;
+			height: 23px;
+			margin-right: 8px;
+			display: inline-block;
+			background: url(../img/btc.png) center center no-repeat;
 		}
 	}
 }
@@ -190,6 +232,12 @@ header{
     z-index: 5;
     background: url(../img/arrow1.png) no-repeat;
     background-position: 80px 16px;
+    &_lk{
+    	font-size: 12px;
+    	height: 35px;
+    	padding-top: 7px;
+    	background-position: 80px 14px;
+    }
 	&__item{
 		display: none;
 		background: transparent;
@@ -218,6 +266,11 @@ header{
 				margin-right: 9px;
 			}
 		}
+		&_lk{
+			img{
+				width: 20px;
+			}
+		}
 		&_active{
 			display: block;
 			order: 2;
@@ -243,6 +296,10 @@ header{
 		height: 66px;
 		display: inline-block;
 		position: relative;
+		&_lk{
+			max-width: 135px;
+    		height: 44px;
+		}
 		&:hover{
 			.item1{
 				transform: rotate(1turn);
@@ -347,6 +404,11 @@ header{
 	left: 46px;
 	transition: transform 0.7s linear;
 	animation-duration: 1.5s;
+	&_lk{
+		height: 30px;
+		top: 6px;
+    	left: 32px;
+	}
 }
 .item2{
 	position: absolute;
@@ -354,6 +416,11 @@ header{
 	left: 37px;
 	transition: transform 0.7s linear;
 	animation-duration: 1.5s;
+	&_lk{
+		height: 41px;
+		top: 1px;
+    	left: 27px;
+	}
 }
 .headerbott{
 	&__info{
