--- a/go6percent/scss/layout/_header.scss
+++ b/go6percent/scss/layout/_header.scss
@@ -473,6 +473,19 @@ header{
 			}
 		}
 	}
+	.header{
+		&_lk{
+			height: auto;
+		}
+	}
+	.headertop{
+		&_lk{
+			.wrapper{
+				flex-wrap: wrap;
+				justify-content: space-around;
+			}
+		}
+	}
 }
 
 @media screen and (min-width: 992px){
@@ -486,6 +499,11 @@ header{
 @media screen and (min-width: 768px) and (max-width: 991px) {
 	header{
 		padding-bottom: 80px;
+	}
+	.header{
+		&_lk{
+			height: auto;
+		}
 	}
 	.headertop {
 		.wrapper{
@@ -527,6 +545,9 @@ header{
 		&__down{
 			bottom: 25px;
 		}
+		&_lk{
+			height: auto;
+		}
 	}
 	.headertop{
 		flex-direction: column;
@@ -555,6 +576,9 @@ header{
 		&__register{
 			margin-right: 0;
     		margin-bottom: 10px;
+		}
+		&__btc{
+			margin-bottom: 10px;
 		}
 	}
 	.headernav{
