--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -828,6 +828,9 @@ footer {
   font-weight: 400;
   text-transform: uppercase;
 }
+.fmenu__link:hover {
+  color: #a91c5f;
+}
 
 .subscribe input[type="email"] {
   width: 225px;
@@ -1117,6 +1120,9 @@ h3 {
   font-weight: 300;
   cursor: pointer;
   line-height: 30px;
+}
+.sidenav__item a:hover {
+  color: #a91c5f;
 }
 .sidenav__text {
   display: flex;
@@ -1561,6 +1567,9 @@ h3 {
   font-size: 14px;
   font-weight: 400;
 }
+.sideinfo__item a:hover {
+  color: #a91c5f;
+}
 .sideinfo__item i {
   font-size: 18px;
   color: #2d2d2d;
@@ -1748,6 +1757,11 @@ h3 {
 .mainnav ul {
   width: 100%;
   list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+.mainnav ul ul {
+  display: block;
 }
 .mainnav li {
   display: inline-block;
@@ -1777,7 +1791,7 @@ h3 {
   box-shadow: 0 0 0 9999px rgba(255, 255, 255, 0.9) inset;
   position: absolute;
   padding: 10px 30px;
-  bottom: -366px;
+  top: 30px;
   left: 0;
   z-index: 7;
   width: 895px;
@@ -2745,12 +2759,16 @@ h3 {
   align-items: flex-start;
   justify-content: flex-start;
 }
-.modaltown__item span {
+.modaltown__item a {
   color: #503471;
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
   font-weight: 400;
   margin-bottom: 7px;
+  cursor: pointer;
+}
+.modaltown__item a:hover {
+  color: #a91c5f;
 }
 .modaltown__sub {
   font-family: 'Roboto', sans-serif;
