--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -740,6 +740,9 @@ header {
   .header__info {
     margin-right: 0;
   }
+  .header__side {
+    display: none;
+  }
 
   .search {
     margin-bottom: 5px;
@@ -939,6 +942,7 @@ footer {
   .footer__box {
     text-align: center;
     margin-bottom: 10px;
+    margin-right: 0;
   }
   .footer__box_fl {
     min-height: auto;
@@ -1739,6 +1743,10 @@ h3 {
 }
 .interview__line {
   height: 1px;
+}
+
+.main__container {
+  padding: 15px;
 }
 
 .maincont {
@@ -2591,6 +2599,255 @@ h3 {
 }
 
 /*Kinds end*/
+/*Cart page*/
+.breadcrumbs {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.breadcrumbs a {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+}
+.breadcrumbs a:hover {
+  color: #a91c5f;
+}
+.breadcrumbs span {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  margin: 0 3px;
+}
+
+.cart__title {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+
+.carttable {
+  border-radius: 5px;
+  border: 1px solid #aeaeae;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.carttable__col_1 {
+  width: 380px;
+}
+.carttable__col_2 {
+  width: 90px;
+}
+.carttable__col_3 {
+  width: 120px;
+}
+.carttable__col_4 {
+  width: 105px;
+}
+.carttable__col_5 {
+  width: 124px;
+}
+.carttable__col_6 {
+  width: 45px;
+}
+.carttable__title {
+  line-height: 32px;
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  background: #cfcfcf;
+  text-align: center;
+  min-height: 32px;
+}
+.carttable__item {
+  padding: 10px;
+  min-height: 64px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid #aeaeae;
+}
+.carttable__item_c {
+  justify-content: center;
+}
+.carttable__item:last-child {
+  border-bottom: 0;
+}
+.carttable__img {
+  width: 43px;
+  height: 43px;
+  border: 1px solid #cfcfcf;
+  border-radius: 5px;
+  margin-right: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.carttable__img img {
+  height: 90%;
+  max-height: 31px;
+}
+.carttable__name {
+  color: #484747;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: normal;
+}
+.carttable__color {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.carttable__color span {
+  color: #484747;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  margin-right: 3px;
+}
+.carttable .colorbox__item {
+  width: 11px;
+  height: 11px;
+}
+.carttable__text {
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+}
+.carttable__remove {
+  width: 22px;
+  height: 23px;
+  border: 1px solid #d0d0d0;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.perinfo {
+  width: 320px;
+}
+.perinfo__butts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.perinfo__butts .showmore {
+  width: 155px;
+  height: 31px;
+  margin: 0;
+}
+.perinfo__p {
+  color: #aeaeae;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+.perinfo__input {
+  margin-bottom: 20px;
+}
+.perinfo__input label {
+  color: #192028;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  display: block;
+  margin-bottom: 5px;
+}
+.perinfo__input span {
+  color: #a91c5f;
+}
+.perinfo__input input, .perinfo__input textarea {
+  width: 100%;
+  height: 24px;
+  border-radius: 6px;
+  color: #192028;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 0 15px;
+  border: 1px solid #e1e1e1;
+  box-shadow: inset 0px 0px 3px 1px rgba(225, 225, 225, 0.75);
+}
+.perinfo__input input::placeholder, .perinfo__input textarea::placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #aeaeae;
+}
+.perinfo__input input.perinfo_phone1 {
+  width: 50px;
+  margin-right: 11px;
+}
+.perinfo__input input.perinfo_phone2 {
+  width: calc(100% - 65px);
+}
+.perinfo__input input.perinfo_phone2::placeholder {
+  line-height: 10px;
+}
+.perinfo__input textarea {
+  padding: 5px 15px;
+  height: 100px;
+}
+.perinfo__checkbox {
+  display: none;
+}
+.perinfo__checkboxlabel {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding-left: 25px;
+  margin-right: 15px;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  color: #192028;
+}
+.perinfo__checkboxlabel:before {
+  content: "";
+  border-radius: 3px;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #aeaeae;
+  margin-right: 8px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  box-shadow: inset 0px 0px 3px 1px rgba(225, 225, 225, 0.75);
+}
+.perinfo__checkboxlabel a {
+  color: #3b205c;
+}
+
+.perinfo__checkbox:checked + .perinfo__checkboxlabel:before {
+  content: "";
+  background: url(../img/check2.png) center center no-repeat;
+  background-size: 80%;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  font-size: 15px;
+  color: #f3f3f3;
+  text-align: center;
+  line-height: 6px;
+}
+
+/*Cart page end*/
 /*Modal*/
 .modalform {
   width: 550px;
@@ -2955,6 +3212,9 @@ h3 {
     top: 0;
     width: 100%;
     z-index: 50;
+  }
+  .mainnav ul {
+    display: block;
   }
   .mainnav li.mainnav_toggle {
     display: flex;
