--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -735,6 +735,11 @@ h3{
 		height: 1px;
 	}
 }
+.main{
+	&__container{
+		padding: 15px;
+	}
+}
 .maincont{
 	width: 895px;
 	background: #fff;
@@ -1584,6 +1589,256 @@ h3{
 	}
 }
 /*Kinds end*/
+
+/*Cart page*/
+.breadcrumbs{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin-bottom: 15px;
+	a{
+		color: #2d2d2d;
+		font-family: 'Roboto', sans-serif;
+		font-size: 12px;
+		font-weight: 400;
+		&:hover{
+			color: #a91c5f;
+		}
+	}
+	span{
+		color: #2d2d2d;
+		font-family: 'Roboto', sans-serif;
+		font-size: 12px;
+		font-weight: 400;
+		margin: 0 3px;
+	}
+}
+.cart{
+	&__title{
+		color: #2d2d2d;
+		font-family: 'Roboto', sans-serif;
+		font-size: 20px;
+		font-weight: 400;
+		line-height: normal;
+		margin-bottom: 10px;
+	}
+}
+.carttable{
+	border-radius: 5px;
+	border: 1px solid #aeaeae;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 30px;
+	&__col{
+		&_1{
+			width: 380px;
+		}
+		&_2{
+			width: 90px;
+		}
+		&_3{
+			width: 120px;
+		}
+		&_4{
+			width: 105px;
+		}
+		&_5{
+			width: 124px;
+		}
+		&_6{
+			width: 45px;
+		}
+	}
+	&__title{
+		line-height: 32px;
+		color: #2d2d2d;
+		font-family: 'Roboto', sans-serif;
+		font-size: 14px;
+		font-weight: 500;
+		background: #cfcfcf;
+		text-align: center;
+		min-height: 32px;
+	}
+	&__item{
+		padding: 10px;
+		min-height: 64px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		border-bottom: 1px solid #aeaeae;
+		&_c{
+			justify-content: center;
+		}
+		&:last-child{
+			border-bottom: 0;
+		}
+	}
+	&__img{
+		width: 43px;
+		height: 43px;
+		border: 1px solid #cfcfcf;
+		border-radius: 5px;
+		margin-right: 7px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img{
+			height: 90%;
+			max-height: 31px;
+		}
+	}
+	&__name{
+		color: #484747;
+		font-family: 'Roboto', sans-serif;
+		font-size: 14px;
+		font-weight: 300;
+		line-height: normal;
+	}
+	&__color{
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		span{
+			color: #484747;
+			font-family: 'Roboto', sans-serif;
+			font-size: 14px;
+			font-weight: 300;
+			margin-right: 3px;
+		}
+	}
+	.colorbox__item{
+		width: 11px;
+		height: 11px;
+	}
+	&__text{
+		color: #2d2d2d;
+		font-family: 'Roboto', sans-serif;
+		font-size: 14px;
+		font-weight: 400;
+		text-align: center;
+	}
+	&__remove{
+		width: 22px;
+		height: 23px;
+		border: 1px solid #d0d0d0;
+		border-radius: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+	}
+}
+.perinfo{
+	width: 320px;
+	&__butts{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 5px;
+		.showmore{
+			width: 155px;
+			height: 31px;
+			margin: 0;
+		}
+	}
+	&__p{
+		color: #aeaeae;
+		font-family: 'Roboto', sans-serif;
+		font-size: 12px;
+		font-weight: 400;
+		line-height: normal;
+		margin-bottom: 10px;
+	}
+	&__input{
+		margin-bottom: 20px;
+		label{
+			color: #192028;
+			font-family: 'Roboto', sans-serif;
+			font-size: 14px;
+			font-weight: 400;
+			display: block;
+			margin-bottom: 5px;
+		}
+		span{
+			color: #a91c5f;
+		}
+		input,textarea{
+			width: 100%;
+			height: 24px;
+			border-radius: 6px;
+			color: #192028;
+			font-family: 'Roboto', sans-serif;
+			font-size: 12px;
+			font-weight: 400;
+			padding: 0 15px;
+			border: 1px solid #e1e1e1;
+			box-shadow: inset 0px 0px 3px 1px rgba(225,225,225,0.75);
+			&::placeholder{
+				font-family: 'Roboto', sans-serif;
+				font-size: 12px;
+				font-weight: 400;
+				color: #aeaeae;
+			}
+		}
+		input.perinfo_phone1{
+			width: 50px;
+			margin-right: 11px;
+		}
+		input.perinfo_phone2{
+			width: calc(100% - 65px);
+			&::placeholder{
+				line-height: 10px;
+			}
+		}
+		textarea{
+			padding: 5px 15px;
+			height: 100px;
+		}
+	}
+	&__checkbox{
+		display: none;
+	}
+	&__checkboxlabel{
+		display: inline-block;
+		cursor: pointer;
+		position: relative;
+		padding-left: 25px;
+		margin-right: 15px;
+		font-family: "Roboto", sans-serif;
+		font-size: 12px;
+		font-weight: 500;
+		line-height: normal;
+		color: #192028;;
+		&:before{
+			content: "";
+			border-radius: 3px;
+    		display: inline-block;
+    		width: 20px;
+    		height: 20px;
+    		border: 1px solid #aeaeae;
+    		margin-right: 8px;
+    		position: absolute;
+    		left: 0;
+    		top: 0;
+    		box-shadow: inset 0px 0px 3px 1px rgba(225, 225, 225, 0.75);
+		}
+		a{
+			color: #3b205c;
+		}
+	}
+}
+.perinfo__checkbox:checked + .perinfo__checkboxlabel:before{
+	content: "";
+	background: url(../img/check2.png) center center no-repeat;
+	background-size: 80%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+    font-size: 15px;
+    color: #f3f3f3;
+    text-align: center;
+    line-height: 6px;
+}
+/*Cart page end*/
+
 /*Modal*/
 .modalform{
 	width: 550px;
@@ -1958,6 +2213,9 @@ h3{
     	top: 0;
     	width: 100%;
     	z-index: 50;
+    	ul{
+    		display: block;
+    	}
     	li.mainnav_toggle{
     		display: flex;
     		padding-top: 0;
