--- a/smoky/scss/layout/_footer.scss
+++ b/smoky/scss/layout/_footer.scss
@@ -202,6 +202,7 @@ footer{
     	&__box{
     		text-align: center;
     		margin-bottom: 10px;
+    		margin-right: 0;
     		&_fl{
     			min-height: auto;
     		}
